# just-fuck

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/justfuck/: mapper.rs
