[package]
name = "justfuck"
version = "0.1.0"
edition = "2021"
author = "27Onion"
about = "A jsfuck encoder written in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
crossterm = "0.25.0"
